[gd_scene load_steps=14 format=3 uid="uid://dtwlh1ngil0u6"]

[ext_resource type="Script" uid="uid://darbk6esbrnph" path="res://scripts/hud.gd" id="1_5ysmq"]
[ext_resource type="Texture2D" uid="uid://hfhpxss1bicf" path="res://assets/sprites/access_alarm.png" id="3_uo2fv"]
[ext_resource type="Texture2D" uid="uid://dwx6l44ch24m3" path="res://assets/sprites/result_title.png" id="4_6fi6k"]
[ext_resource type="FontFile" uid="uid://blhg73s33pstp" path="res://assets/fonts/OdorMeanChey-Regular.ttf" id="6_0m4u7"]
[ext_resource type="Texture2D" uid="uid://c4bqno2ufxh0c" path="res://assets/sprites/reset_btn_normal.png" id="6_mphia"]
[ext_resource type="Texture2D" uid="uid://puym6s4iqvgh" path="res://assets/sprites/home_btn_normal.png" id="7_0i1j5"]
[ext_resource type="Texture2D" uid="uid://ox74txjrmbbj" path="res://assets/sprites/reset_btn_pressed.png" id="7_0m4u7"]
[ext_resource type="Texture2D" uid="uid://b532vh8d7dtbp" path="res://assets/sprites/stat_btn_normal.png" id="8_apjy4"]
[ext_resource type="PackedScene" uid="uid://ugag3rg264an" path="res://scenes/stats.tscn" id="8_hd3ao"]
[ext_resource type="Texture2D" uid="uid://vkp6by3t8y27" path="res://assets/sprites/home_btn_pressed.png" id="8_mphia"]
[ext_resource type="Texture2D" uid="uid://mbsflhexel7u" path="res://assets/sprites/stat_btn_pressed.png" id="9_5n1hp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ysmq"]
bg_color = Color(0.94902, 0.913725, 0.501961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fi6k"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ysmq")

[node name="HomeButton" type="TextureButton" parent="."]
offset_left = 40.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 60.0
texture_normal = ExtResource("7_0i1j5")
texture_pressed = ExtResource("8_mphia")
stretch_mode = 4

[node name="Alarm" type="Sprite2D" parent="."]
position = Vector2(217, 35)
texture = ExtResource("3_uo2fv")

[node name="GameTime" type="Label" parent="."]
offset_left = 234.0
offset_top = 12.0
offset_right = 285.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "120"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 18.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_5ysmq")
max_value = 120.0
step = 1.0
value = 120.0
show_percentage = false

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="ScorePanel" type="Panel" parent="."]
offset_left = 560.0
offset_top = 10.0
offset_right = 760.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6fi6k")

[node name="ScoreTitle" type="Label" parent="."]
offset_left = 580.0
offset_top = 12.0
offset_right = 660.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Score"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = 680.0
offset_top = 12.0
offset_right = 740.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Result" type="Node" parent="."]

[node name="BlurBackground" type="ColorRect" parent="Result"]
offset_right = 800.0
offset_bottom = 450.0
color = Color(1, 1, 1, 0.501961)

[node name="Panel" type="Panel" parent="Result"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6fi6k")

[node name="Title" type="Sprite2D" parent="Result"]
position = Vector2(400, 150)
texture = ExtResource("4_6fi6k")

[node name="TitleLabel" type="Label" parent="Result"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -106.0
offset_right = 90.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0117647, 0.337255, 0.443137, 1)
theme_override_fonts/font = ExtResource("6_0m4u7")
theme_override_font_sizes/font_size = 32
text = "Your Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Result"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -27.5
offset_right = 40.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Result"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 45.0
offset_right = 100.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RedoButton" type="TextureButton" parent="Result/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_mphia")
texture_pressed = ExtResource("7_0m4u7")

[node name="StatButton" type="TextureButton" parent="Result/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_apjy4")
texture_pressed = ExtResource("9_5n1hp")

[node name="HomeButton" type="TextureButton" parent="Result/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_0i1j5")
texture_pressed = ExtResource("8_mphia")

[node name="Stats" parent="." instance=ExtResource("8_hd3ao")]
visible = false

[connection signal="pressed" from="HomeButton" to="." method="_on_top_home_button_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="Result/HBoxContainer/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="pressed" from="Result/HBoxContainer/StatButton" to="." method="_on_stat_button_pressed"]
[connection signal="pressed" from="Result/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
